--- a/llmservice/index.html
+++ b/llmservice/index.html
@@ -3,63 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba de IA con Gemini</title>
+    <title>Chat de Pistas</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 20px;
         }
-        input, button {
-            margin: 10px;
+        .chat-container {
+            position: fixed;
+            right: 10px;
+            bottom: 10px;
+            width: 300px;
+            height: 400px;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            background: white;
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
+        }
+        .chat-box {
+            flex-grow: 1;
             padding: 10px;
-            width: 80%;
-            max-width: 400px;
+            overflow-y: auto;
+            border-bottom: 1px solid #ccc;
         }
-        img {
-            margin-top: 20px;
-            max-width: 300px;
-            display: none;
+        .chat-input {
+            display: flex;
+            padding: 10px;
+        }
+        .chat-input input {
+            flex-grow: 1;
+            padding: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        .chat-input button {
+            margin-left: 5px;
+            padding: 5px 10px;
+            background-color: blue;
+            color: white;
+            border: none;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <h2>Prueba de IA con Gemini</h2>
-    <input type="text" id="imageUrl" placeholder="Ingresa URL de la imagen">
-    <input type="text" id="apiKey" placeholder="Ingresa tu API Key">
-    <button onclick="getDescription()">Obtener Descripción</button>
-    <p id="response"></p>
-    <img id="preview" alt="Vista previa de la imagen">
+    <div class="chat-container">
+        <div class="chat-box" id="chatBox"></div>
+        <div class="chat-input">
+            <input type="text" id="chatInput" placeholder="Escribe un mensaje...">
+            <button onclick="sendMessage()">Enviar</button>
+        </div>
+    </div>
 
     <script>
-        async function getDescription() {
-            const imageUrl = document.getElementById("imageUrl").value.trim();
-            const apiKey = document.getElementById("apiKey").value.trim();
-            const responseText = document.getElementById("response");
-            const imagePreview = document.getElementById("preview");
+        async function sendMessage() {
+            const input = document.getElementById("chatInput");
+            const message = input.value.trim();
+            if (!message) return;
 
-            if (!imageUrl || !apiKey) {
-                responseText.innerText = "Por favor, ingresa la URL de la imagen y la API Key.";
-                return;
-            }
+            const chatBox = document.getElementById("chatBox");
+            chatBox.innerHTML += `<div><strong>Tú:</strong> ${message}</div>`;
+            input.value = "";
 
-            // Mostrar vista previa de la imagen
-            imagePreview.src = imageUrl;
-            imagePreview.style.display = "block";
+            const response = await fetch("http://localhost:8003/chat", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ imageUrl: "URL_DE_LA_IMAGEN", messages: [message] })
+            });
 
-            try {
-                const response = await fetch("http://localhost:8003/getHint", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ imageUrl, apiKey })
-                });
-
-                const data = await response.json();
-                responseText.innerText = data.hint || "No se recibió una descripción.";
-            } catch (error) {
-                responseText.innerText = "Error al conectar con el servidor.";
-                console.error(error);
-            }
+            const data = await response.json();
+            chatBox.innerHTML += `<div><strong>IA:</strong> ${data.response}</div>`;
         }
     </script>
 </body>
