--- a/llmservice/index.html
+++ b/llmservice/index.html
@@ -3,78 +3,162 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat de Pistas</title>
+    <title>Chat IA - Adivina el Animal</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #f8f9fa;
         }
+        
         .chat-container {
-            position: fixed;
-            right: 10px;
-            bottom: 10px;
-            width: 300px;
-            height: 400px;
-            border: 1px solid #ccc;
-            border-radius: 10px;
+            width: 90%;
+            max-width: 600px;
+            height: 300px;
             background: white;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             display: flex;
             flex-direction: column;
             overflow: hidden;
+            margin-bottom: 20px;
+            position: fixed;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
         }
+
         .chat-box {
             flex-grow: 1;
             padding: 10px;
             overflow-y: auto;
-            border-bottom: 1px solid #ccc;
+            max-height: 250px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
+
+        .chat-message {
+            padding: 8px;
+            border-radius: 5px;
+            max-width: 80%;
+            word-wrap: break-word;
+        }
+
+        .user-message {
+            background-color: #007bff;
+            color: white;
+            align-self: flex-end;
+        }
+
+        .bot-message {
+            background-color: #e9ecef;
+            align-self: flex-start;
+        }
+
         .chat-input {
             display: flex;
             padding: 10px;
+            border-top: 1px solid #ddd;
+            background: #fff;
         }
-        .chat-input input {
+
+        input {
             flex-grow: 1;
-            padding: 5px;
-            border: 1px solid #ccc;
+            padding: 8px;
+            border: 1px solid #ddd;
             border-radius: 5px;
         }
-        .chat-input button {
-            margin-left: 5px;
-            padding: 5px 10px;
-            background-color: blue;
+
+        button {
+            margin-left: 10px;
+            padding: 8px 15px;
+            background-color: #007bff;
             color: white;
             border: none;
+            border-radius: 5px;
             cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
 <body>
+
+    <h1>Juego de Adivinanza con IA</h1>
+
     <div class="chat-container">
         <div class="chat-box" id="chatBox"></div>
         <div class="chat-input">
-            <input type="text" id="chatInput" placeholder="Escribe un mensaje...">
-            <button onclick="sendMessage()">Enviar</button>
+            <input type="text" id="mensaje" placeholder="Escribe tu mensaje">
+            <button onclick="enviarMensaje()">Enviar</button>
         </div>
     </div>
 
     <script>
-        async function sendMessage() {
-            const input = document.getElementById("chatInput");
-            const message = input.value.trim();
-            if (!message) return;
+        let imageUrl = "https://www.wikidata.org/wiki/Q134015#/media/File:Meerkat_(Suricata_suricatta).jpg"; // URL de la imagen fija
 
-            const chatBox = document.getElementById("chatBox");
-            chatBox.innerHTML += `<div><strong>Tú:</strong> ${message}</div>`;
-            input.value = "";
+        // 🔹 Enviar la URL de la imagen al backend al cargar la página
+        async function setImageReference() {
+            try {
+                const response = await fetch("http://localhost:8003/set-image", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ imageUrl })
+                });
 
-            const response = await fetch("http://localhost:8003/chat", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ imageUrl: "URL_DE_LA_IMAGEN", messages: [message] })
-            });
-
-            const data = await response.json();
-            chatBox.innerHTML += `<div><strong>IA:</strong> ${data.response}</div>`;
+                const data = await response.json();
+                console.log("✅ Imagen de referencia establecida:", data.message);
+            } catch (error) {
+                console.error("❌ Error al establecer la imagen de referencia:", error);
+            }
         }
+
+        async function enviarMensaje() {
+            const mensaje = document.getElementById("mensaje").value.trim();
+            if (!mensaje) return;
+
+            agregarMensaje(mensaje, "user");
+
+            document.getElementById("mensaje").value = ""; 
+
+            const bodyData = { messages: [mensaje] }; // 🚀 Ya no se envía la imagen
+
+            try {
+                const respuesta = await fetch("http://localhost:8003/chat", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify(bodyData),
+                });
+
+                const data = await respuesta.json();
+                agregarMensaje(data.response, "bot");
+            } catch (error) {
+                agregarMensaje("Error al conectar con la IA.", "bot");
+                console.error("Error:", error);
+            }
+        }
+
+        function agregarMensaje(texto, tipo) {
+            const chatBox = document.getElementById("chatBox");
+            const mensajeDiv = document.createElement("div");
+            mensajeDiv.textContent = texto;
+            mensajeDiv.classList.add("chat-message", tipo === "user" ? "user-message" : "bot-message");
+            chatBox.appendChild(mensajeDiv);
+            chatBox.scrollTop = chatBox.scrollHeight; 
+        }
+
+        // Llamar a setImageReference() al cargar la página
+        window.onload = setImageReference;
     </script>
+
 </body>
 </html>
