--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@ together with a mapping table showing the relationships between channels and inp
 <p><strong>User service:</strong> An Express service that handles the registration of new users in the system.</p>
 </li>
 <li>
-<p><strong>Auth service:</strong> An Express service dedicated to user authentication.</p>
+<p><strong>LLM:</strong> External Large Language Model the system uses to request hints about the image generated.</p>
 </li>
 </ul>
 </div>
@@ -2864,7 +2864,7 @@ For these reasons, maintaining a high level of test coverage was a priority. We 
 <div id="footer">
 <div id="footer-text">
 Version 8.2 EN<br>
-Last updated 2025-05-05 18:34:00 +0200
+Last updated 2025-05-07 13:20:11 +0200
 </div>
 </div>
 </body>
